# libfutil

./: CMakeLists.txt  Makefile  Makefile.in  README.md  config.status  configure  configure.ac  configure.scan
include/: config.h  futil_config.h  futil_config.h.in  helloworld.h
src/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in  helloworld.c
